# omenspeaker

./: .gitignore  Cargo.toml  README.md  package.json
db/migrations/: 00-refresh.sql  01-contents.sql
db/seeder/: contents-faker.sql
src/: lib.rs
